--- a/email-worker-compose/worker/Dockerfile
+++ b/email-worker-compose/worker/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6
-LABEL maintainer 'Aluno Cod3r <aluno at cod3r.com.br>'
+LABEL maintainer 'Geovane Fonseca <aluno at cod3r.com.br>'
 
 ENV PYTHONUNBUFFERED 1
 RUN pip install redis==2.10.5
